--- a/program/templates/program/pdf_page.html
+++ b/program/templates/program/pdf_page.html
@@ -75,7 +75,7 @@
             <td>{{program.impl_agency}}</th>
 
             <td>
-                <a href="{% url 'program:create-pdf' program.title %}" target="_blank" class="btn btn-primary">VIEW</a>
+                <a href="{% url 'program:create-pdf' program.prog_id %}" target="_blank" class="btn btn-primary">VIEW</a>
             </td>
           </tr>
         </tbody>
