--- a/project/templates/project/pdf_page.html
+++ b/project/templates/project/pdf_page.html
@@ -75,7 +75,7 @@
             <td>{{project.status}}</th>
 
             <td>
-                <a href="{% url 'project:create-pdf' project.title %}" target="_blank" class="btn btn-primary">VIEW</a>
+                <a href="{% url 'project:create-pdf' project.proj_id %}" target="_blank" class="btn btn-primary">VIEW</a>
             </td>
           </tr>
         </tbody>
