--- a/team/templates/team/index.html
+++ b/team/templates/team/index.html
@@ -57,6 +57,8 @@
           <div class="box">
             {% if team.photo %}
             <img class="img_team" src="{{ team.photo.url }}" alt="profile">
+            {% else %}
+            <img class="img_team" src="{% static 'images/default.jpg' %}" alt="profile">
             {% endif %}
             <h2>{{team.fname}} {{team.lname}}</h2>
             <h3>Position: {{team.position}}</h3>
