--- a/secretariat/templates/secretariat/details.html
+++ b/secretariat/templates/secretariat/details.html
@@ -25,7 +25,7 @@
                     {% endif %}
                 </div>
                     <div class="about-content">
-                    <h1>{{secretariat.lname}}, {{secretariat.fname}} {{secretariat.mname}}</h1>
+                    <h1>{{secretariat.lname}}, {{secretariat.fname}} {{secretariat.mname|default_if_none:""}}</h1>
                     <h5>{{secretariat.position}}</h5>
                     <table>
                         <tr>
