--- a/static/css/cmi.css
+++ b/static/css/cmi.css
@@ -149,9 +149,9 @@ body {
     background: #339933;
 }
 
-/* .box:hover{
-    box-shadow: 0 10px 15px rgba(36, 71, 33, 0.3);
-} */
+.box:hover{
+    box-shadow: 0 10px 15px rgba(15, 81, 9, 0.272);
+}
   
 .show{
     display:block;
@@ -200,7 +200,6 @@ body {
         padding: 8px 15px;
         color: #ffffff;
         background: #008000;
-        border-radius: 5px;
         display: inline-block;
         text-decoration: none;
         font-weight: 600;
@@ -241,7 +240,7 @@ body {
         margin-top: 20px;
         display: grid;
         gap: 16px;
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     }
     #btn{
         margin-top: 2rem;
@@ -265,7 +264,6 @@ body {
         padding: 8px 15px;
         color: #ffffff;
         background: #008000;
-        border-radius: 5px;
         display: inline-block;
         text-decoration: none;
         font-weight: 600;
