--- a/sub/templates/sub/detail_sdg.html
+++ b/sub/templates/sub/detail_sdg.html
@@ -17,28 +17,35 @@
     <body>
         <div id="nav-placeholder"></div>
 
-        <br><br>
-            
-        <div class="cont">
-            <div class="wrapper">
-                <div class="text-box">
-                    <p>
-                        <div class="name">{{sdg.sdg_title}}</div>
-                        <div class="content">Description:<br> {{sdg.sdg_desc}}</div>
+        <div class="container" style="margin-top: 70px;">
+            <section class="about">
+                    <div class="about-content">
+                    <h1>{{sdg.sdg_title}}</h1>
+                    <p>{{sdg.sdg_desc}}</p>
+                    <table>
+                        <tr>
+                            <th></th>
+                            <td></td>
+                        </tr>
+
                         {% if user.is_superuser %}
-                        <div class="content">Created By: {{sdg.created_by}}</div>
-                        <div class="content">Modified By: {{sdg.modified_by}}</div>
+                        <tr>
+                            <th>Created By: </th>
+                            <td>{{sdg.created_by}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Modified By: </th>
+                            <td>{{sdg.modified_by}}</td>
+                        </tr>
                         {% endif %}
-                        <br><br>
-                        <a href="{% url 'sub:sdg' %}" class="btn" style="font-weight: 600;">Back</a>
-                    </p>
-                </div>
-            </div>
+                    </table>
 
-            <div class="#">
-            </div>
-
+                    <a href="{% url 'sub:sdg' %}" class="btn btn-secondary">Back</a>
+                    </div>
+            </section>
         </div>
+                
 
         <script>
             $(function(){
